[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Entities/pew.png" type="Texture" id=1]
[ext_resource path="res://Script/Entities/Bullets/Bullet.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1, 1 )

[sub_resource type="RayShape2D" id=2]
length = 1.0

[node name="Bullet" type="RigidBody2D"]
mass = 3.0
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 4.71239
shape = SubResource( 1 )
one_way_collision_margin = 20.0

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 1 )

[node name="DestroyTimer" type="Timer" parent="."]
one_shot = true

[node name="CollisionDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionDetector"]
rotation = -1.5708
shape = SubResource( 2 )
one_way_collision_margin = 20.0
[connection signal="timeout" from="DestroyTimer" to="." method="_on_DestroyTimer_timeout"]
[connection signal="area_entered" from="CollisionDetector" to="." method="_on_CollisionDetector_area_entered"]
